@@ -143,7 +143,8 @@ display::display(unit_map& units, CVideo& video, const gamemap& map,
 		}
 		temp_anim.add_frame(current_time);
 		flags_.push_back(temp_anim);
-		flags_.back().start_animation(0, animated<image::locator>::INFINITE_CYCLES);
+
+		flags_.back().start_animation(rand()%flags_.back().get_frames_count(), animated<image::locator>::INFINITE_CYCLES);
 	}
 
 	//clear the screen contents
