@@ -44,6 +44,7 @@ SVN trunk (1.1.2+svn):
    * hitpoint distribution graphs under Damage Calculations
    * improvements to loadscreen progressbar
    * new selection stlye for menu listboxes
+   * all flags are not synchrone anymore
  * multiplayer maps:
    * added multiplayer maps: 8p Morituri
    * revised multiplayer maps: Blitz, Charge, Cynsaun Battlefield, Den of Onis,
